# voice-diarty

./: .replit
diary /diary v2/: .gitignore  README.md
diary /diary v2/backend/: pyproject.toml
diary /diary v2/backend/alembic/: env.py
diary /diary v2/backend/alembic/versions/: 0001_initial.py  0002_add_audio_key.py  0003_add_insights_and_word_count.py  0004_change_insight_id_to_uuid.py  0005_make_audio_fields_nullable.py
diary /diary v2/backend/app/: main.py
diary /diary v2/backend/app/api/: __init__.py  auth.py  entries.py  insights.py  transcribe.py
diary /diary v2/backend/app/core/: config.py  database.py  security.py
diary /diary v2/backend/app/models/: __init__.py  entry.py  insight.py  tag.py  user.py
diary /diary v2/backend/app/schemas/: __init__.py  entry.py  insight.py  transcribe.py  user.py
diary /diary v2/backend/app/services/: __init__.py  insights.py  llm.py  providers.py  storage.py  stt.py  tags.py
diary /diary v2/backend/tests/: conftest.py  test_insights.py  test_services.py
diary /diary v2/frontend/: MIGRATION_COMPLETE.md  MIGRATION_PLAN.md  REPLIT_INTEGRATION_GUIDE.md  TESTING_CHECKLIST.md  compare-replit.sh  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
diary /diary v2/frontend/replit_frontend_raw/attached_assets/: Pasted-I-want-you-to-create-an-additional-entries-list-page-inspired-by-Apple-Notes-on-iOS-mobile-first--1763661808342_1763661808342.txt  (+2 more)
diary /diary v2/frontend/replit_frontend_raw/client/: index.html
diary /diary v2/frontend/src/: App.tsx  config.ts  index.css  main.tsx  styles.css
(+29 files in other folders)
